# Permuto

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  README2.md  README_CPP.md  REQUIREMENTS.md  TECHNICAL_DETAILS.md  example_context.json  example_template.json
cli/: CMakeLists.txt  main.cpp
cmake/: ClavisConfig.cmake.in  PermutoConfig.cmake.in
examples/: api_example.cpp  build_example.sh  mixed_mode_example.cpp  multi_stage_example.cpp
include/clavis/: clavis.hpp  exceptions.hpp
include/permuto/: exceptions.hpp  permuto.hpp
src/: CMakeLists.txt  api.cpp  clavis.cpp  clavis_internal.hpp  cycle_detector.cpp  cycle_detector.hpp  exceptions.cpp  json_pointer.cpp  json_pointer.hpp  permuto.cpp  permuto_internal.hpp  placeholder_parser.cpp  placeholder_parser.hpp  reverse_processor.cpp  reverse_processor.hpp  template_processor.cpp  template_processor.hpp
tests/: CMakeLists.txt  clavis_test.cpp  permuto_test.cpp  test_cycle_detector.cpp  test_integration.cpp  test_json_pointer.cpp  test_placeholder_parser.cpp  test_reverse_processor.cpp  test_template_processor.cpp
